tests/typechecking/valid/simple_let.ml
let x = 1
in ignore x; ()
