tests/typechecking/invalid/app_non_func.ml
let f = 1 in
let x = f 2 in
()
